--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	
 	<script type="text/javascript" src="js/collections/ItemCollection.js"></script>
 
-	<script type="text/javascript" src="js/views/ItemView.js"></script>
+	<script type="text/javascript" src="js/views/SettingItemView.js"></script>
 	<script type="text/javascript" src="js/views/ChecklistItemView.js"></script>
 	<script type="text/javascript" src="js/views/SettingsView.js"></script>
 	<script type="text/javascript" src="js/views/HomeView.js"></script>
@@ -42,7 +42,7 @@
 
 	<!-- ########### TEMPLATES ########### -->
 	<script type="text/template" id="settingsView">
-		<div class="container">
+		<div class="container" id="page_settings">
 			<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
 				<div class="container" id="master_navigation">
 					<a href="#" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
@@ -52,7 +52,7 @@
 		</div>
 
 		<div id="main">
-			<div class="container" role="form">
+			<div class="container form-inline" role="form">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="panel-title">When the checklist is done, send this email:</h3>
@@ -81,7 +81,7 @@
 						<h3 class="panel-title">Checklist questions:</h3>
 					</div>
 					<div class="panel-body">
-						<ul class="list-group" id="itemList" role="form"></ul>
+						<ul class="list-group" id="settingsItemList" role="form"></ul>
 					</div>
 				</div>
 
@@ -93,21 +93,29 @@
 		</div>
 	</script>
 
-	<script type="text/template" id="itemView">
+	<script type="text/template" id="settingItemView">
 		<div class="row">
-			<div class="form-group col-md-10 input-group-lg">
+			<div class="form-group col-md-12 input-group-lg">
 				<input type="text" class="form-control" value="<%= label %>" placeholder="Label">
 			</div>
-			<div class="col-md-2 pull-right">
-				<button type="button" class="btn btn-primary btn-move-up"><span class="glyphicon glyphicon-arrow-up"></span></button>
-				<button type="button" class="btn btn-primary btn-move-down"><span class="glyphicon glyphicon-arrow-down"></span></button>
-				<button type="button" class="btn btn-danger btn-removeItem"><span class="glyphicon glyphicon-remove"></span></button>
+			<div class="col-md-12">
+				<div class="pull-left">
+					<select class="form-control item-type">
+						<option value="button" <% if(type=='button') { %>selected="selected"<% } %>>Button</option>
+						<option value="photo" <% if(type=='photo') { %>selected="selected"<% } %>>Photo</option>
+					</select>
+				</div>
+				<div class="pull-right">
+					<button type="button" class="btn btn-primary btn-move-up"><span class="glyphicon glyphicon-arrow-up"></span></button>
+					<button type="button" class="btn btn-primary btn-move-down"><span class="glyphicon glyphicon-arrow-down"></span></button>
+					<button type="button" class="btn btn-danger btn-removeItem"><span class="glyphicon glyphicon-remove"></span></button>
+				</div>
 			</div>
 		</div>
 	</script>
 
 	<script type="text/template" id="homeView">
-		<div class="container">
+		<div class="container" id="page_home">
 			<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
 				<div class="container" id="master_navigation">
 					<a href="#settings" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-cog"></span> Settings</a>
@@ -118,17 +126,10 @@
 		<% if(window.itemCollection.length > 0) { %>
 			<div id="main">
 				<div class="container" role="form">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title">Checklist questions:</h3>
-						</div>
-						<div class="panel-body">
-							<ul class="list-group" id="itemList" role="form"></ul>
-						</div>
-					</div>
+					<table class="table" id="itemList" role="form"></table>
 
-					<div class="form-group col-md-12 input-group-lg">
-						<button type="button" class="btn btn-primary btn-lg btn-save">I'm done! <span class="glyphicon glyphicon-send"></span><!--'--></button>
+					<div class="form-group input-group-lg">
+						<button type="button" class="btn btn-primary btn-lg btn-save" disabled="disabled">I'm done! <span class="glyphicon glyphicon-send"></span><!--'--></button>
 					</div>
 				</div>
 			</div>
@@ -136,18 +137,29 @@
 	</script>
 
 	<script type="text/template" id="checklistItemView">
-		<div class="row">
-			<div class="form-group">
-				<label for="inputEmail3" class="col-sm-10 control-label"><%= label %></label>
-				<div class="col-sm-2">
+		<td>
+			<label for="inputEmail3" class="control-label"><%= label %></label>
+		</td>
+		<td class="right">
+			<% switch(type) { 
+				case 'button': %>
 					<% if(done) { %>
 						<button type="button" class="btn btn-success btn-untick">Done <span class="glyphicon glyphicon-ok"></span></button>
 					<% } else { %>
-						<button type="button" class="btn btn-primary btn-tick">Done?</button>
-					<% }  %>
-				</div>
-			</div>
-		</div>
+						<button type="button" class="btn btn-primary btn-tick">Checked?</button>
+					<% } %>
+					<% break; %>
+
+				<% case 'photo': %>
+					<% if(done) { %>
+						<button type="button" class="btn btn-success btn-untick">Photo <span class="glyphicon glyphicon-camera"> <span class="glyphicon glyphicon-ok"></span></button>
+					<% } else { %>
+						<button type="button" class="btn btn-primary btn-tick">Photo <span class="glyphicon glyphicon-camera"></span></button>
+					<% } %>
+					<% break; %>
+					<% break; %>
+			<% } %>
+		</td>
 	</script>
 	
 </head>
