--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<script type="text/javascript" src="js/views/ChecklistItemView.js"></script>
 	<script type="text/javascript" src="js/views/SettingsView.js"></script>
 	<script type="text/javascript" src="js/views/HomeView.js"></script>
+	<script type="text/javascript" src="js/views/SendingView.js"></script>
 	
 	<script type="text/javascript" src="js/App.js"></script>
 	
@@ -162,6 +163,14 @@
 		</td>
 	</script>
 	
+	<script type="text/template" id="sendingView">
+		<div class="container">
+			<h3>Sending</h3>
+			<div class="progress progress-striped active">
+				<div class="progress-bar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">0%</div>
+			</div>
+		</div>
+	</script>
 </head>
 <body onload="app.initialize()">
 	
