--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				</div>
 
 				<div class="form-group col-md-12 input-group-lg">
-					<button type="button" class="btn btn-primary btn-save" disabled="disabled">Save</button>
+					<button type="button" class="btn btn-primary btn-save" disabled="disabled">Next</button>
 				</div>
 			</div>
 		</div>
